--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,52 @@ figcaption {
 #details a:active {
   color: red;
 }
+section{
+  margin-bottom: 20px;
+  padding: 20px;
+}
+img,video,audio{
+  max-width: 100%;
+}
+*{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.wrapper{
+  width: 960px;
+  margin: 0 auto;
+  background: grey;
+}
+
+.col-1{
+  float: left;
+  width: 32%;
+  background: #ccc;
+}
+
+.col-2{
+  float: left;
+  width:66%;
+  background: #ccc;
+}
+.col-3{
+  background: #ccc;
+}
+
+[class*="col-"]{
+  margin-left: 2%;
+}
+
+.first{
+  margin-left: 0%;
+}
+
+.clearfix:after{
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  height: 0;
+  line-height: 0;
+}
