--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
 @import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
-/* This 
-is 
+/* This
+is
 a comment! */
 
 /* CSS Syntax:
@@ -17,105 +17,111 @@ selector {
 /* Type selector */
 
 p { /* select all <p> */
-  font-size: 1em; /* 16px, ?pt, 100%, 1em */
-  line-height: 1.5em;
+    font-size: 1em; /* 16px, ?pt, 100%, 1em */
+    line-height: 1.5em;
 }
 
 figcaption {
-  /*font-weight: normal;
-  font-size: 0.75em;
-  line-height: 1.5em;
-  font-family: Georgia, "New Times Roman", serif;*/
-  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
-  color: #777;
-  text-align: right;
+    /*font-weight: normal;
+    font-size: 0.75em;
+    line-height: 1.5em;
+    font-family: Georgia, "New Times Roman", serif;*/
+    font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
+    color: #777;
+    text-align: right;
 }
 
 /* Class selector (applied to as many elements as you like) */
 
 .milk-text { /* select elements with class="milk-text" */
-  font: bold 2.6em 'Elsie Swash Caps', cursive;
-  color: white;
-  text-shadow: 0 2px 3px #000;
+    font: bold 2.6em 'Elsie Swash Caps', cursive;
+    color: white;
+    text-shadow: 0 2px 3px #000;
 }
 
 /* ID selector (apply to one unique element per page) */
 
 #logo { /* select elements with id="logo" */
-  background: aqua;
+    background: aqua;
 }
 
 /* Descendent Selector */
 
 #logo h1 { /* selects <h1> if inside the id="logo" */
-  font-family: 'Clicker Script', cursive;
+    font-family: 'Clicker Script', cursive;
 }
 
 #logo h2 {
-  font-family: 'Elsie Swash Caps', cursive;
+    font-family: 'Elsie Swash Caps', cursive;
 }
 
 /* Psuedo Selector */
 
 #details a:link, #details a:visited {
-  color: black;
-  text-decoration: none;
+    color: black;
+    text-decoration: none;
 }
 
 #details a:hover {
-  color: black;
-  text-decoration: underline;
+    color: black;
+    text-decoration: underline;
 }
 
 #details a:active {
-  color: red;
+    color: red;
 }
 section{
-  margin-bottom: 20px;
-  padding: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
 }
 img,video,audio{
-  max-width: 100%;
+    max-width: 100%;
 }
 *{
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .wrapper{
-  width: 960px;
-  margin: 0 auto;
-  background: grey;
+    width: 960px;
+    margin: 0 auto;
+    background: grey;
 }
 
 .col-1{
-  float: left;
-  width: 32%;
-  background: #ccc;
+    float: left;
+    width: 32%;
+    background: #ccc;
 }
 
 .col-2{
-  float: left;
-  width:66%;
-  background: #ccc;
+    float: left;
+    width:66%;
+    background: #ccc;
 }
 .col-3{
-  background: #ccc;
+    background: #ccc;
 }
 
 [class*="col-"]{
-  margin-left: 2%;
+    margin-left: 2%;
 }
 
 .first{
-  margin-left: 0%;
+    margin-left: 0%;
 }
 
 .clearfix:after{
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  height: 0;
-  line-height: 0;
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    height: 0;
+    line-height: 0;
+}
+
+#social{
+    position: fixed;
+top: 200px;
+right: 20px;
 }
